# medaka_rust

./: .gitignore  Cargo.toml  Makefile  README.md  test.sh
src/: codegen.rs  lib.rs  main.rs  parse.rs  tokenize.rs
src/parse/: define.rs  func.rs  mod.rs  struc.rs  typed.rs
